exp/ch: forward env vars instead of using env

--- a/exp/cahn-hilliard/Makefile
+++ b/exp/cahn-hilliard/Makefile
@@ -14,9 +14,9 @@ ifneq ($(IN),)
 $(DATA_DIR)/ch_%.csv: $(DATA_DIR)/prun_%.rankfile | $(DATA_DIR)/
 	mkdir -p "$@.mpl"
 	set -o pipefail; \
-	$(call prun-cmd,$*,$<) \
 	env OMP_NUM_THREADS=$(OMP_NUM_THREADS) \
 	  XDG_CACHE_HOME="$@.cache" MPLCONFIGDIR="$@.mpl" \
+	$(call prun-cmd,$*,$<,OMP_NUM_THREADS XDG_CACHE_HOME MPLCONFIGDIR) \
 	bash $(PWD)/../fch.sh "$(call tgt-extract,mesh,$*)" \
 		"$(call tgt-extract,ranks,$*)" \
 		"$(call tgt-tasks-per-node,$*)" \
