exp/ch-scaling: expose params as CLI args

--- a/exp/cahn-hilliard-scaling/Makefile
+++ b/exp/cahn-hilliard-scaling/Makefile
@@ -16,8 +16,12 @@ $(DAT)/ch-subset.csv: $(DAT)/ch-all.csv subset.py
 
 $(DAT)/ch-dsl.pdf: $(DAT)/ch-subset.csv plot-dsl.py
 	python plot-dsl.py $< $@
-$(DAT)/ch-mesh-dist.pdf: $(DAT)/ch-subset.csv plot-mesh-dist.py
-	python plot-mesh-dist.py $< $@
+$(DAT)/ch-mesh-dist-8192.pdf: $(DAT)/ch-subset.csv plot-mesh-dist.py
+	python plot-mesh-dist.py \
+		--mesh 8192 --theta-tpn 24 --summit-tpn 40,42 $< $@
+$(DAT)/ch-mesh-dist-4096.pdf: $(DAT)/ch-subset.csv plot-mesh-dist.py
+	python plot-mesh-dist.py \
+		--mesh 4096 --theta-tpn 48 --summit-tpn 41 $< $@
 $(DAT)/ch-mem.pdf: $(DAT)/ch-subset.csv plot-mem.py
 	python plot-mem.py $< $@
 
