ptools: summit/make: bring back --bind-to none
Upstream fix Issue #850.

--- a/prefix-tools/clusters/olcf-summit/make/Makefile
+++ b/prefix-tools/clusters/olcf-summit/make/Makefile
@@ -23,8 +23,7 @@ DEDI_NODE_FOR_RANK0?=1
 # Print peak memory usage every N seconds
 MONITOR_MEM?=
 
-# Versions of OpenMPI stack prior to 2021-03 have needed '--bind-to none' here
-MPIRUN_INTERNAL_ARGS:=
+MPIRUN_INTERNAL_ARGS:=--bind-to none
 
 MEM_PER_NODE?=510G
 
