ptools/summit: split stdout and stderr
With -o, stderr should be redirected to the same file as stdout,
but can't find confirmation of that in the bsub man page, so
pass both args just in case.

--- a/prefix-tools/clusters/olcf-summit/make/Makefile
+++ b/prefix-tools/clusters/olcf-summit/make/Makefile
@@ -210,7 +210,9 @@ $(DATA_DIR)/%: | $(DATA_DIR)/
 	echo JOB_NAME=$${JOB_NAME}
 	echo $@ > $${JOB_NAME}.tgt
 	MONITOR=$(MONITOR) SUPPRESS_RC=$(SUPPRESS_RC) \
-	$(PTOOLS_HOST)/pbsub -J "$${JOB_NAME}" -o "$${JOB_NAME}.log" \
+	$(PTOOLS_HOST)/pbsub -J "$${JOB_NAME}" \
+		-oo "$${JOB_NAME}.out" \
+		-eo "$${JOB_NAME}.err" \
 		-P "$(ACCOUNT)" \
 		-nnodes "$(call job-nodes-arg,$*)" \
 		-W "$(call max-time-arg,$*)" \
