ptools/make: exchange DVM URI between prte<->prun
Fixes DVMs in concurrent jobs interfering with each other.

--- a/prefix-tools/clusters/anl-theta/make/Makefile
+++ b/prefix-tools/clusters/anl-theta/make/Makefile
@@ -192,7 +192,8 @@ ifneq ($(IN),)
 # TODO: switch to rankfile
 define prun-cmd
 $(error TODO: not implemented: switch to rankfile)
-prun -n "$(call tgt-extract,ranks,$(1))" \
+prun --dvm-uri "file:$(DVM_URI_FILE)" \
+	-n "$(call tgt-extract,ranks,$(1))" \
 	--map-by "slot$(call gen-map-by-mods)" --hostfile "$(abspath $(2))" \
 	$(patsubst %,-x %,$(3)) $(MPIRUN_ARGS) $(MPIRUN_INTERNAL_ARGS)
 endef
@@ -235,9 +236,11 @@ $(DATA_DIR)/%: | $(DATA_DIR)/
 		$(if $(QUEUE_ARG),-q $(QUEUE_ARG)) \
 		$(QSUB_ARGS) \
 		-- \
-		env LOG=$${JOB_NAME}.dvmlog dvmrun \
+		env LOG=$${JOB_NAME}.dvmlog \
+		dvmrun --report-uri "$${JOB_NAME}.dvmuri" \
 		-- \
 		make -j -k -C $(CURDIR) IN=1 \
+		DVM_URI_FILE="$${JOB_NAME}.dvmuri" \
 		DATA_DIR=$(DATA_DIR) MPIRUN_ARGS='$(MPIRUN_ARGS)' \
 		VERBOSE=$(VERBOSE) TASKS=$(TASKS) \
 		NOLOCAL=$(NOLOCAL) \
