ptools/summit/make: send all output to one file
More convenient, and don't see any issues with stderr being lost.

--- a/prefix-tools/clusters/olcf-summit/make/Makefile
+++ b/prefix-tools/clusters/olcf-summit/make/Makefile
@@ -228,8 +228,7 @@ $(DATA_DIR)/%: | $(DATA_DIR)/
 	echo $@ > $${JOB_NAME}.tgt
 	MONITOR=$(MONITOR) SUPPRESS_RC=$(SUPPRESS_RC) \
 	$(PTOOLS_HOST)/pbsub -J "$${JOB_NAME}" \
-		-o "$${JOB_NAME}.out" \
-		-e "$${JOB_NAME}.err" \
+		-o "$${JOB_NAME}.log" \
 		-P "$(ACCOUNT)" \
 		-nnodes "$(call job-nodes-arg,$*)" \
 		-W "$(call max-time-arg,$*)" \
