--- a/prefix-tools/clusters/olcf-summit/make/Makefile
+++ b/prefix-tools/clusters/olcf-summit/make/Makefile
@@ -8,23 +8,13 @@ ifeq ($(ACCOUNT),)
 $(error ACCOUNT env var not set to ANL Theta billing account name)
 endif # ACCOUNT
 
-MAKEFLAGS+=--keep-going
-
-# 0 max time means maximum allowed
 MAX_TIME?=
 ACCOUNT?=
 MONITOR?=0
 SUPPRESS_RC?=
-NOLOCAL?=1
-OVERSUBSCRIBE?=
-DISPLAYMAP?=
 TASKS?=
-DEDI_NODE_FOR_RANK0?=1
 # Print peak memory usage every N seconds
 MONITOR_MEM?=
-
-MPIRUN_INTERNAL_ARGS:=--bind-to none
-
 MEM_PER_NODE?=510G
 
 # Debug Q max nodes is 'unlimited' on Summit
@@ -39,123 +29,13 @@ else
 QUEUE_ARG:=$(QUEUE)
 endif
 
-define strip-slash
-$(patsubst %/,%,$(1))
-endef
-DATA_DIR?=$(call strip-slash,$(dir $(firstword $(MAKECMDGOALS))))
-$(foreach t,$(MAKECMDGOALS),\
-  $(if $(filter $(DATA_DIR),$(call strip-slash,$(dir $(t)))),,\
-    $(error Targets have different data directory paths)))
-
-$(DATA_DIR)/:
-	mkdir -p $@
-
-EMPTY:=
-SPACE:= $(EMPTY) $(EMPTY)
-define combine-targets
-$(DATA_DIR)/$(subst $(SPACE),+,$(strip $(foreach s,$(1),$(strip $(s)))))
-endef
-define split-targets
-$(subst +,$(SPACE),$(patsubst $(DATA_DIR)/%,%,$(1)))
-endef
-
-define target-set-rule
-$(DATA_DIR)/$(1): DATS=$(2)
-$(DATA_DIR)/$(1): $(if $(IN),$(patsubst %,$(DATA_DIR)/%,$(2)))
-$(DATA_DIR)/$(1)^split: $(patsubst %,$(DATA_DIR)/%,$(2)) ;
-endef
-define target-set
-$(eval $(call target-set-rule,$(1),$(2)))
-endef
-
-DEFINE:=define
-define BC_FUNCS
-$(DEFINE) ceil(x) {\n
-  auto os,xx;x=-x;os=scale;scale=0\n
-  xx=x/1;if(xx>x).=xx--\n
-  scale=os;return(-xx)\n
-}\n
-scale=4;\n
-endef
-define calc
-$(strip $(shell echo -e '$(BC_FUNCS)' '$(1)' | bc))
-endef
-define sum
-$(call calc,$(patsubst %,% +,$(1)) 0)
-endef
-define max
-$(strip $(shell echo '$(1)' | xargs -n 1 echo | sort -nr | head -1))
-endef
-define greater-eq
-$(filter $(call calc,$(1) >= $(2)),1)
-endef
+include $(EPREFIX)/usr/lib/prefix-tools/make/Makefile.job
 
 define is-dbg-q
 $(findstring debug,$(QUEUE_ARG))
 endef
 
-# tgt-extract(key, target_name [, default, [optional]]) -> value
-define tgt-extract
-$(strip $(if $(findstring $(1),$(2)),\
-	$(subst $(1)-,,$(filter $(1)-%,$(subst _, ,$(subst ., ,$(2))))),
-	$(or $(3),$(if $(4),,$(error Field $(1) not in target name)))))
-endef
-
-# tgt-arg(target_name, key, [, arg_name=key, [default]]) -> --key value
-define tgt-arg
-$(call opt-arg,$(or $(3),$(2)),$(call tgt-extract,$(2),$(1),$(4),optional))
-endef
-
-# opt-arg(name, value) -> --name value (if non-empty)
-define opt-arg
-$(if $(2),--$(1) "$(2)")
-endef
-
-COMMA:=,
-
-# tgt-tasks(target_name) -> comma-separated list of algorithm step names
-define tgt-tasks
-$(strip $(subst -,$(COMMA),$(call tgt-extract,tasks,$(1),,optional)))
-endef
-
-define gen-map-by-mods
-$(strip $(if $(NOLOCAL),:NOLOCAL)$(if $(OVERSUBSCRIBE),:OVERSUBSCRIBE)$(if $(DISPLAYMAP),:DISPLAY))
-endef
-
-# tgt-tasks-per-node(target_name)
-define tgt-tasks-per-node
-$(strip $(call tgt-extract,tpn,$(1)))
-endef
-
-# tgt-nodes(target_name) -> node count (from: ranks/tasks_per_node)
-# +1 extra node for dedicating to rank 0
-define tgt-nodes
-$(strip \
-  $(if $(DEDI_NODE_FOR_RANK0),\
-    $(call calc,\
-      1 + ceil(($(call tgt-extract,ranks,$(1))-1) / \
-	$(call tgt-tasks-per-node,$(1)))),\
-    $(call calc,\
-      ceil($(call tgt-extract,ranks,$(1)) / $(call tgt-tasks-per-node,$(1))))))
-endef
-
 ifeq ($(IN),)
-define cap-job-nodes
-$(if $(call is-dbg-q),\
-	$(if $(DBG_Q_MAX_NODES),\
-		$(if $(filter 1,$(call calc,$(1) <= $(DBG_Q_MAX_NODES))),\
-			$(1),$(error Debug queue allows only up to $(DBG_Q_MAX_NODES) nodes)),\
-		$(1)),\
-	$(if $(filter 1,$(call calc,$(MAIN_Q_MIN_NODES) < $(1))),\
-		$(1),$(MAIN_Q_MIN_NODES)))
-endef
-define required-nodes
-$(strip $(call sum,\
-  $(foreach t,$(call split-targets,$(1)),$(call tgt-nodes,$(t)))))
-endef
-define job-nodes
-$(strip $(call cap-job-nodes,$(call required-nodes,$(1))))
-endef
 # max-time-for-nodes(nodes) -> max allowed job time limit
 # https://docs.olcf.ornl.gov/systems/summit_user_guide.html#job-priority-by-processor-count
 define max-time-for-nodes
@@ -166,56 +46,11 @@ $(if $(call greater-eq,$(1),1),2:00:00,\
 $(if $(call is-dbg-q),02:00:00,\
     $(error Nodes below min allocation and not on debug queue: $(1))))))))
 endef
-endif # IN
 
-ifeq ($(IN),)
 # Only one job at a time allowed in debug queue
 ifneq ($(call is-dbg-q),)
 .NOTPARALLEL:
 endif
-endif # IN
-
-# Logic to regeneate rankfile and the main target if some make variables change
-PRUN_SETTINGS=DEDI_NODE_FOR_RANK0=$(DEDI_NODE_FOR_RANK0)
-$(DATA_DIR)/prun_%.settings: PHONY | $(DATA_DIR)/
-	[[ -f "$@" && "$$(cat $@)" == "$(PRUN_SETTINGS)" ]] || \
-		echo -n "$(PRUN_SETTINGS)" > $@
-
-$(DATA_DIR)/prun_%.rankfile: $(DATA_DIR)/prun_%.settings | $(DATA_DIR)/
-	mapranks --ranks "$(call tgt-extract,ranks,$*)" \
-		--ranks-per-node "$(call tgt-tasks-per-node,$*)" \
-		$(if $(DEDI_NODE_FOR_RANK0),--dedicate-node-to-rank0) "$@"
-
-ifneq ($(IN),)
-# prun-cmd(target-stem, rankfile, env vars)
-define prun-cmd
-prun $(if $(DVM_URI_FILE),--dvm-uri "file:$(DVM_URI_FILE)") \
-	-n "$(call tgt-extract,ranks,$(1))" \
-	--map-by "rankfile:FILE=$(2)$(call gen-map-by-mods)" \
-	$(patsubst %,-x %,$(3)) $(MPIRUN_ARGS) $(MPIRUN_INTERNAL_ARGS)
-endef
-# Example usage from the consumer makefile:
-#$(DATA_DIR)/ch_%.csv: $(DATA_DIR)/prun_%.hostfile | $(DATA_DIR)/
-#	set -o pipefail; \
-#	$(call prun-cmd,$*,$<) ./app.sh 2>&1 | tee "$@.log"
-else # IN=0
-define expanded-targets
-$(or $(DATS),$(1))
-endef
-define job-nodes-ovr
-$(strip $(or $(NODES),$(call job-nodes,$(call expanded-targets,$(1)))))
-endef
-# job-nodes-arg(target_name)
-define job-nodes-arg
-$(strip $(info Nodes required for $(1): \
-  $(call required-nodes,$(call expanded-targets,$(1))))\
-$(call job-nodes-ovr,$(1)))
-endef
-# max-time(target_name) -> max allowed job time limit
-define max-time-arg
-$(strip $(or $(MAX_TIME),\
-    $(call max-time-for-nodes,$(call job-nodes-ovr,$(1)))))
-endef
 
 # Accepts multiple targets in a single job: make dat/foo.log+bar.log
 # Re JOB_NAME: Ideally we would just use the top-level target name, but
@@ -256,7 +91,3 @@ job:
 		$(BSUB_ARGS) -Is /bin/bash
 .PHONY: job
 endif # IN
-
-.PHONY: PHONY
-PHONY: ;
-.SECONDARY:
