--- a/exp/cahn-hilliard/summit/Makefile
+++ b/exp/cahn-hilliard/summit/Makefile
@@ -1,10 +1,10 @@
 CLUSTER=olcf-summit
 ACCOUNT?=csc436
 
-PTOOLS:=${EPREFIX}/usr/lib/prefix-tools
-PTOOLS_HOST:=${EPREFIX}/ptools
+PTOOLS_MAKE:=${EPREFIX}/usr/lib/prefix-tools/make
 
-include $(PTOOLS)/make/Makefile
+include $(PTOOLS_MAKE)/Makefile.job
+include $(PTOOLS_MAKE)/Makefile
 
 all: ch-test
 
