--- a/exp/apps/casper/cahnhilliard/CMakeLists.txt
+++ b/exp/apps/casper/cahnhilliard/CMakeLists.txt
@@ -17,12 +17,18 @@ casper_add_exec(ch ch.meta
 # part, though.
 find_package(Python COMPONENTS Interpreter REQUIRED) # for Python_SITELIB
 
+# TODO: the .pth shortcut is not being honored when importing from the
+# embedded interpreter for some reason.
+set(PETSC_PY_DIR $ENV{PETSC_DIR}/lib)
+
+set(EXTRA_PYTHONPATH "${CMAKE_CURRENT_SOURCE_DIR}:${CASPER_PYAPI_DIR}:${Python_SITELIB}:${PETSC_PY_DIR}")
+
 # Run the target program (test target)
 # TODO: burn the EXTRA_PYTHONPATH into the metaprogram somehow
 add_custom_target(ch.run
   ${CMAKE_COMMAND} -E env
     XDG_CACHE_HOME=cachedir
-    EXTRA_PYTHONPATH="${CMAKE_CURRENT_SOURCE_DIR}:${CASPER_PYAPI_DIR}:${Python_SITELIB}"
+    EXTRA_PYTHONPATH="${EXTRA_PYTHONPATH}"
     mpirun -x XDG_CACHE_HOME -x EXTRA_PYTHONPATH
       -n $$RANKS --map-by ppr:1:node:NOLOCAL
         ${ch_BUILD_DIR}/ch
