ptools: don't default to dedicating node to rank0
That cannot be done on a single generic linux host,
and we want stuff to work out of the box on it.

--- a/prefix-tools/make/Makefile.job
+++ b/prefix-tools/make/Makefile.job
@@ -7,7 +7,7 @@ MAKEFLAGS+=--keep-going
 NOLOCAL?=1
 OVERSUBSCRIBE?=
 DISPLAYMAP?=
-DEDI_NODE_FOR_RANK0?=1
+DEDI_NODE_FOR_RANK0?=
 
 MPIRUN_INTERNAL_ARGS:=--bind-to none
 
