--- a/exp/cahn-hilliard/summit/Makefile
+++ b/exp/cahn-hilliard/summit/Makefile
@@ -1,6 +1,7 @@
 CLUSTER=olcf-summit
 ACCOUNT?=csc436
 MAP_BY?=rankfile
+DEDI_NODE_FOR_RANK0?=
 
 PTOOLS_MAKE:=${EPREFIX}/usr/lib/prefix-tools/make
 
