ptools: anl-theta: disable sm/xpmem transport
Causes segfault in Cahn-Hilliard app.

--- a/prefix-tools/clusters/anl-theta/etc/openmpi-mca-params.conf.d/20-ptools.conf
+++ b/prefix-tools/clusters/anl-theta/etc/openmpi-mca-params.conf.d/20-ptools.conf
@@ -21,6 +21,9 @@ oob_tcp_if_exclude = 10.237.0.0/16,10.236.0.0/16
 #pml_ob1_priority = 100
 #btl_base_verbose = 100
 ##btl_ugni_verbose = 100
+# Select uGNI and disable sm (namely, xpmem; note that --without-xpmem is not honored)
+# Reason: xpmem causes a Cahn-Hilliard Firedrake app to segfault early in its run
+btl = self,ugni
 
 # Select transport: UCX
 #pml = ucx
