exp/apps/cuda: don't pass debug flags
At least not by default.

--- a/exp/apps/cuda/Makefile
+++ b/exp/apps/cuda/Makefile
@@ -18,7 +18,7 @@ $(error GCC $(GCC_VER_MAJMIN) not supported by CUDA:$(NL) \
 endif
 
 add_%: add_%.cu
-	nvcc -g -O0 -o $@ $<
+	nvcc -o $@ $<
 
 clean:
 	rm -f add_copy add_managed
