ptool/summit: make: fix path to pbsub

--- a/prefix-tools/clusters/olcf-summit/make/Makefile
+++ b/prefix-tools/clusters/olcf-summit/make/Makefile
@@ -62,7 +62,7 @@ $(DATA_DIR)/%: | $(DATA_DIR)/
 	@echo JOB_NAME=$${JOB_NAME}
 	echo $@ > $${JOB_NAME}.tgt
 	MONITOR=$(MONITOR) SUPPRESS_RC=$(SUPPRESS_RC) \
-	$(PTOOLS_HOST)/pbsub -J "$${JOB_NAME}" \
+	$(EPREFIX)/ptools/pbsub -J "$${JOB_NAME}" \
 		-o "$${JOB_NAME}.log" \
 		-P "$(ACCOUNT)" \
 		-nnodes "$(call job-nodes-arg,$*)" \
