exp/apps/casper/ch: add crt.ini

--- a/exp/apps/casper/cahnhilliard/CMakeLists.txt
+++ b/exp/apps/casper/cahnhilliard/CMakeLists.txt
@@ -9,6 +9,7 @@ casper_add_exec(ch ch.meta
   SOURCES ch.meta.cpp
   PLATFORM platform.ini
   TUNED_PARAMS tuned-params.ini
+  RUNTIME_CFG crt.ini
   )
 
 # TODO: workaround: the app has to set Python_SITELIB explicitly.
